@@ -14,6 +14,7 @@ v0.2 (not yet released)
 - issue #15 : use Keen.io dashboard template for trends dashboard
 - issue #58 : split project in a client (current project) and library, see https://github.com/buildtimetrend/python-lib
 - issue #56 : set projectname with a parameter when using generate_trend.py
+- change license to GNU Affero General Public License v3 or later (AGPLv3+)
 
 v0.1.2 (released on 6Aug2014)
 - improve Travis CI example : pull released version from git
